fix: fixed rendering bug on smaller screen size

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,6 @@ html{
 }
 
 body {
-  @apply max-md:h-[max(880px,_100dvh)] h-dvh;
   background: linear-gradient(180deg, var(--background-start-rgb), var(--background-end-rgb));
   overflow-x: hidden;
 }
